added pagination + updated front end
